# LiberTEM-rs

./: Cargo.toml  README.md
.github/workflows/: CI.yml
common/: Cargo.toml
common/examples/: zarr.rs
common/src/: consumer.rs  frame_stack.rs  generic_cam_client.rs  lib.rs  py_cam_client.rs  py_connection.rs  writer.rs  zarr_dio.rs  zarr_writer.rs
libertem_asi_mpx3/src/: base_types.rs
libertem_asi_tpx3/: Cargo.toml
libertem_asi_tpx3/examples/: live_server.py
libertem_asi_tpx3/src/: background_thread.rs  chunk_stack.rs  headers.rs  main_py.rs  stream.rs
libertem_dectris/examples/: live_server.py
libertem_dectris/src/: base_types.rs
libertem_qd_mpx/: Cargo.toml
libertem_qd_mpx/src/: base_types.rs  main_py.rs
playegui/: Cargo.toml
playegui/src/: app.rs
zarrs/src/: storage.rs
