[package]
name = "common"
authors = ["Alexander Clausen <a.clausen@fz-juelich.de>"]
license = "MIT"
version = "0.2.12"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
ipc-test = { path = "../ipc_test" }
stats = { path = "../stats" }
pyo3 = { version = "0.21.2", features = ["abi3-py37"] }
numpy = "0.21"
serde = "1.0.199"
tempfile = "3.10.1"
thiserror = "1.0.59"
log = "0.4.21"
ndarray = { version = "0.15.6" }
zerocopy = "0.7.35"
num = "0.4.3"
multiversion = "0.7.4"
zarrs = { path = "../zarrs" }
# zarrs = { version = "0.16.3" }
serde_json = "1.0.121"
parking_lot = "0.12.3"
walkdir = "2.5.0"
pathdiff = "0.2.1"
nix = "0.29.0"
page_size = "0.6.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "casting"
harness = false
